2003-03-10	fabian
    * Rewrite the color stuff in emulation code. Now we
      use seperate color table for normal and bold text.
      We now will using high color to indicate bold. Also,
      the color table will make the future implementation
      of customized ANSI color easier.
      Limitations: Any color you select for FG/BG will be
      converted to the closest color in the colorTable.
      Aslo, currently FG color will have no alpha.
    * Fixed a display problem when change FG/BG colors or
      Transparency.
    * Implemented ANSI code VPA and VPR, to fix one user's
      problem with Debian programs.
    * Fixed a blinking bug
    * Implemented ANSI code ECH
      
2003-03-10	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added some missing semi-colons in Chinese strings files.


2003-03-08	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed an issue where '=', '/', and '*' could not be 
      typed from numeric keypad. This was because those 
      keys were mapped to the PF2, PF3, PF4 keys. Now we 
      have a numLock state that is on by default. When 
      state is enabled, numeric keypad has the default 
      operation. When it is disabled, the keys 
      'numlock', '=', '/', and '*' send PF1, PF2, PF3, 
      and PF4 sequences. The state can be toggled by using 
      Cmd-numLock. This behavior is basically the same as 
      that implemented in GLTerm.
      

2003-03-04	fabian
    * Fixed a bug in screen update
    
2003-03-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a bug in changing forground and background color 
      in a session.
      

2003-03-03	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Incorporated Max Horn's patches for a variety of 
      enhancements and fixes for some bugs and memory leaks.
      

2003-03-02	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed a screen update bug. Sometimes screen HAS to be 
      updated even if minIndex == [BUFFER length], e.g. when 